--- a/vars/default.yml
+++ b/vars/default.yml
@@ -1,5 +1,5 @@
 ---
-mysql_root_password: "Schubidubidu12"
+mysql_root_password: "Schubidubidu12asfasf232++**234KKFF134124asdfafasdf"
 http_host: "10.0.0.123"
 http_conf: "vosome.conf"
 http_port: "80"
